fixed github releases and issues not showing on home page

--- a/client/src/pages/home/home.module.css
+++ b/client/src/pages/home/home.module.css
@@ -162,6 +162,11 @@
     background: var(--SPRING_GREEN);
 }
 
+.tag {
+    margin-right: .5em;
+    opacity: .6;
+}
+
 @media screen and (min-width: 768px) {
     .wrapper {
         max-width: 600px;
